# reviewermatch-api

./: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  vercel.json
api/: match.js
app/: config.py  database.py  main.py
app/api/: routes.py
app/models/: db_models.py  schemas.py
app/services/: embedder.py  matcher.py  ranker.py
data/: __init__.py  ingest_openalex.py
scripts/: build_index.py  colab_notebook.ipynb  ingest_sample.py  load_jsonl.py  load_metadata.py  seed_postgres.py  test_match.py
tests/: test_api.py
web/: index.html
