# Aligns `uv` with `.python-version` (3.11.x).
# Runtime dependencies: requirements.txt (Docker / Railway).

[project]
name = "reviewermatch-api"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
description = "ReviewerMatch API — pip install -r requirements.txt or Docker"
readme = "README.md"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
